add gc details